[BOTF-117] Fix the issue with buttons wrap
## [BOTF-117] Description
Fixed the CSS issue

--- a/src/components/tiles/slotTile/SlotTile.scss
+++ b/src/components/tiles/slotTile/SlotTile.scss
@@ -43,6 +43,9 @@
       }
 
       .btn-wrap {
+         display: flex;
+         align-items: center;
+
          >button {
             margin-left: 0.5rem;
          }
